--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -35,7 +35,7 @@
 }
 .nav-links {
   height: 0;
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   flex-direction: column;
   transition: 0.3s ease-in-out all;
