--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -59,6 +59,43 @@ canvas {
       cursor: pointer;
       width: 50%;
     }
+    .scroll-down {
+      position: absolute;
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 5;
+      .mouse {
+        height: 5rem;
+        width: 2.5rem;
+        border: 2px solid #f4f4f4;
+        border-radius: 2rem;
+        display: flex;
+      }
+
+      .mouse span {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        background-color: #f4f4f4;
+        border-radius: 50%;
+        margin: auto;
+        animation: move-wheel 1s linear infinite;
+      }
+
+      .arrow span {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border-right: 2px solid #f4f4f4;
+        border-bottom: 2px solid #f4f4f4;
+        transform: rotate(45deg);
+        animation: arrow-down 1s linear infinite;
+      }
+    }
   }
 
   .loading {
@@ -203,5 +240,35 @@ canvas {
   a.top-right {
     top: 60px;
     right: 60px;
+  }
+}
+
+
+@keyframes move-wheel{
+  0%{
+      opacity: 1;
+      transform: translateY(-1rem);
+  }
+  100%{
+      opacity: 0;
+      transform: translateY(2rem);
+  }
+}
+
+@keyframes arrow-down{
+  0%{
+      opacity: 0;
+  }
+  25%{
+      opacity: .25;
+  }
+  50%{
+      opacity: .5;
+  }
+  75%{
+      opacity: .75;
+  }
+  100%{
+      opacity: 1;
   }
 }
